# allure-revision

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO  pyproject.toml  requirements.txt
.github/workflows/: mac.yml  pytests.yml  release.yml  ubuntu-20.04.yml  windows.yml
docker/ubuntu20.04/: Dockerfile
main/: arguments.py  arguments_parser.py  config.json  config.py  data_provider.py  default_config.py  make.py  report.py  report_parser.py  spreadsheet.py  spreadsheet_service.py  vars.py
tests/: category_test.py  duration_test.py  epic_test.py  feature_test.py  flaky_test.py  links_test.py  message_test.py  name_test.py  new_broken_test.py  new_failed_test.py  new_passed_test.py  package_test.py  retries_count_test.py  retries_status_change_test.py  retry_test.py  severity_test.py  status_test.py  statuses_test.py  step_failed_test.py  story_test.py  suite_test.py
tests/allure-report/data/: behaviors.csv  behaviors.json  categories.csv  categories.json  packages.json  suites.csv  suites.json  timeline.json
tests/allure-report/data/test-cases/: 10cb55cece2b5a9.json  12933a41ff444fe7.json  154e7486f0a1b4ee.json  176ba19c9e145463.json  (+144 more)
tests/allure-report/export/: influxDbData.txt  prometheusData.txt
tests/allure-report/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/allure-report/widgets/: behaviors.json  categories-trend.json  categories.json  duration-trend.json  duration.json  environment.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
